# nix-tools

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  python_nix_flake_generator-0.0.1.nix  pyvenv.cfg
python-flake-generator/: flake.nix  pyproject.toml  python_flake_generator-0.0.1.nix
python-flake-generator/application/: cli.py  main.py  python_flake_generator.py
python-flake-generator/domain/: base_flake_recipe.py  create_flake_command.py  description.py  entity.py  flake.py  flake_created_event.py  flake_nix_template.py  flake_recipe_repo.py  flake_repo.py  git_repo.py  git_repo_repo.py  github.py  license.py  nix.py  nix_python_package.py  nix_python_package_repo.py  nix_template.py  nix_template_repo.py  package.py  package_nix_template.py  poetry.py  ports.py  primary_port.py  pypi.py  python_package.py  python_package_repo.py  repo.py  resource_repo.py
python-flake-generator/infrastructure/: _log_config.py  dynamically_discoverable_flake_recipe_repo.py  file_nix_template_repo.py  filesystem_resource_repo.py  folder_flake_repo.py  github_git_repo.py  nixpkgs_python_package_repo.py  pypi.py  pypi_repo.py  resource_files.py  resourcesfileadapter.py
python-flake-generator/python_flake_generator/: cliutils.py  descriptionutils.py  githubutils.py  main.py  nixutils.py  packagetypeutils.py  poetryutils.py  pypiutils.py  templateutils.py
python-flake-generator/resources/: metadata.json
python-flake-generator/src/domain/: description.py  (+11 more)
python-flake-generator/tests/: dynamically_discoverable_flake_recipe_repo_tests.py  python_package_tests.py
(+273 files in other folders)
