[tool.poetry]
name = "python-flake-generator"
version = "0.1.0"
description = ""
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "python_flake_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
packaging = "^23.1"
toml = "^0.10.2"
beautifulsoup4 = "^4.12.2"
mistune = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
